features are working properly